--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -35,7 +36,6 @@ body * {
 #container {
   width: 100%;
   max-width: 588px;
-  height: 100%;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -159,4 +159,16 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+
+/*media queries*/
+@media (min-width: 700px) {
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
